fix online friends misalignment

--- a/aurora/css/base.css
+++ b/aurora/css/base.css
@@ -1351,9 +1351,9 @@ body #app-mount .channel-2QD9_O.selected-1HYmZZ a {
 .guild-1EfMGQ.folder {
 	margin-left:10px;
 }
-.da-friendsOnline {
+/*.da-friendsOnline {
   margin-left:0px;
-}
+}*/
 /*Canary Roundness*/
 .wrapper-1Rf91z .wrapper-2lTRaf:hover,
 .container-2td-dC.da-selected .wrapper-2lTRaf,
